<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_event"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/event_details"
        android:textColor="@color/purple_200"
        android:textSize="45sp" />

    <EditText
        android:id="@+id/eventname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_event_name"
        android:textSize="20sp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/eventdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_event_date"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/eventime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_event_time"
        android:layout_marginTop="20dp"
        android:textSize="20sp"/>
    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/save_event"
        android:textAlignment="center"
        android:gravity="center_horizontal" />


</LinearLayout>