<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/back"
            android:textColor="@color/green"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="previousmonthaction"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/monthyear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/feb_2021"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center_horizontal" />
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="@color/green"
            android:background="@null"
            android:textStyle="bold"
            android:onClick="nextmonthaction"
            android:textSize="20sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sun"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mon"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tue"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wed"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/thu"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fri"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sat"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="16sp"
            android:gravity="center_horizontal" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calenderRecycleview"
        android:layout_width="match_parent"
        android:layout_height="512dp" />

    <Button
        android:id="@+id/add_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Add event"
        android:textAlignment="center"
        android:gravity="center"
        android:textColor="@color/purple_200"
        android:textStyle="bold"
        android:textSize="20sp"/>

</LinearLayout>
